Fixed a colateral web layout bug caused when pagination was implemented in [1872]. See #73.
git-svn-id: https://svn.merengueproject.org/trunk@2262 5c12d508-d76f-0410-91c7-e3e856e0eb0f

--- a/merengueproj/merengue/themes/merengue/media/css/layout.css
+++ b/merengueproj/merengue/themes/merengue/media/css/layout.css
@@ -189,6 +189,10 @@ ul {
   line-height: 17px;
 }
 
+div#coremenu ul.menu1 li a.menu1 {
+  font-size: 0.9em;
+}
+
 #portalmenu ul li table {
   position: absolute;
   display: none;
@@ -866,7 +870,7 @@ table.gsc-search-box td.gsc-input {
   text-align: center;
 }
 
-.current {
+.pagination .current {
   color: #b38f60;
   background: #F2EBD8;
   padding: 0 3px;
